# GitHub-Stars-AI-Tools

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.sh  package.json  pnpm-lock.yaml  start.sh  tsconfig.base.json  tsconfig.packages.json
.github/workflows/: release.yml
.serena/: project.yml
apps/desktop/: PRODUCT.md  components.json  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/desktop/scripts/: package-dmg.mjs  (+7 more)
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/permissions/: gsat-commands.toml
apps/desktop/src-tauri/src/: ai.rs  auth.rs  embedding.rs  github.rs  lib.rs  main.rs  storage.rs  upstream.rs  vector_index.rs
docs/: CHANGELOG-2026-07-05.md  REFACTOR-SPEC.md  phase3-stitch-complete.md  release.md  stitch-implementation-progress.md
docs/analysis/: module-inventory.md  project-overview.md  risk-assessment.md
docs/licenses/: embedding-runtime.md
docs/plan/: architecture-spec.md  dependency-graph.md  local-embedding-v1.md  milestones.md  product-spec.md  task-breakdown.md  vector-search-implementation.md  zvec-vector-roadmap.md
docs/progress/: MASTER.md
docs/quality/: local-vector-search-acceptance.md
docs/releases/: v1.5.3.md
scripts/: verify-acceptance-matrix.mjs  verify-branding.mjs  verify-tauri-release-config.mjs
stitch-downloads/: 01-tag-network.html  02-dashboard.html  03-repository-list.html  04-settings.html  05-ai-search.html  06-profile.html
tasks/: plan.md  todo.md
(+43 files in other folders)
