[package]
name = "gsat-desktop"
version = "1.5.3"
description = "本地优先的 GitHub-Stars-AI-Tools 桌面应用"
authors = ["xingranya"]
edition = "2021"

[lib]
name = "gsat_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22.1"
keyring = "4.1.3"
keyring-core = "1.0.0"
reqwest = { version = "0.13.4", features = ["blocking", "json"] }
# rusqlite 0.40.1 pulls libsqlite3-sys 0.38.1, whose bundled build script uses
# unstable cfg_select! on stable Rust.
rusqlite = { version = "=0.39.0", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.10.9"
tauri = { version = "2", features = [] }
time = { version = "0.3.44", features = ["formatting"] }
tokio = { version = "1", features = ["time"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
apple-native-keyring-store = { version = "1.0.0", features = ["keychain"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-native-keyring-store = "1.1.0"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "ios", target_os = "android"))))'.dependencies]
zbus-secret-service-keyring-store = { version = "1.0.0", features = ["crypto-rust"] }
